--- a/back/pom.xml
+++ b/back/pom.xml
@@ -5,13 +5,13 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.4</version>
+		<version>3.2.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>seekopjc</groupId>
-	<artifactId>demo</artifactId>
+	<artifactId>sekopjc</artifactId>
 	<version>project</version>
-	<name>demo</name>
+	<name>sekopjc</name>
 	<description>Seekop prueba Tecnica back</description>
 	<properties>
 		<java.version>17</java.version>
